Fix grid alignment of new search box

--- a/app/assets/stylesheets/layout/common/_header_v2.scss
+++ b/app/assets/stylesheets/layout/common/_header_v2.scss
@@ -25,7 +25,8 @@
     @include respond-to($mq-m) {
       @include column(4);
       float: right;
-      margin: $baseline-unit*3 0;
+      margin-top: $baseline-unit*3;
+      margin-bottom: $baseline-unit*3;
     }
   }
 
